tests/files/lexer_tests/should_fail/022.cmdr
// Illegal character in string (ascii 22)
var = '';